<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.ahnlab.qa</groupId>
	<artifactId>mblia</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>ahnlab</name>
	<url>http://maven.apache.org</url>


	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<!-- <appium.version>6.1.0</appium.version> -->
		<appium.version>7.1.0</appium.version>
		<testng.version>6.11</testng.version>
		<aspectj.version>1.9.2</aspectj.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<issues.tracker>https://works.ahnlab.com/browse/SQA-42</issues.tracker>
	</properties>

	<parent>
		<groupId>ru.yandex.qatools.allure</groupId>
		<artifactId>allure-examples-parent</artifactId>
		<version>1.0</version>
	</parent>

	<dependencies>
		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis</artifactId>
			<version>1.4.01</version>
		</dependency>
		<dependency>
			<groupId>javax.xml.bind</groupId>
			<artifactId>jaxb-api</artifactId>
			<version>2.3.1</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-core</artifactId>
			<version>2.2.11</version>
		</dependency>
		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>2.2.11</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>javax.activation</groupId>
			<artifactId>activation</artifactId>
			<version>1.1.1</version>
		</dependency>

		<dependency>
			<groupId>io.appium</groupId>
			<artifactId>java-client</artifactId>
			<!-- <version>6.1.0</version> -->
			<version>7.0.0</version>
			<!-- <version>LATEST</version> -->
			<exclusions>
				<exclusion>
					<groupId>com.google.guava</groupId>
					<artifactId>guava</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>23.0</version>
		</dependency>

		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.14.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>3.0.1</version>
		</dependency>

		<!-- <dependency> <groupId>com.aventstack</groupId> <artifactId>extentreports</artifactId> 
			<version>3.0.3</version> </dependency> -->

		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<!-- <version>4.0.0</version> -->
			<!-- <version>3.1.6-SNAPSHOT</version> -->
			<!-- <version>3.1.6-SNAPSHOT</version> -->
			<version>4.0.6</version>
			<!-- <scope>provided</scope> -->
		</dependency>

		<dependency>
			<groupId>io.qameta.allure</groupId>
			<artifactId>allure-testng</artifactId>
			<version>2.8.1</version>
		</dependency>

		<!-- <dependency> <groupId>javax.xml.bind</groupId> <artifactId>jaxb-api</artifactId> 
			<version>2.3.0</version> </dependency> -->
		<!-- <dependency> <groupId>com.sun.xml.bind</groupId> <artifactId>jaxb-impl</artifactId> 
			<version>2.3.0</version> </dependency> -->
		<!-- <dependency> <groupId>org.glassfish.jaxb</groupId> <artifactId>jaxb-runtime</artifactId> 
			<version>2.3.0</version> </dependency> -->
		<!-- <dependency> <groupId>javax.activation</groupId> <artifactId>activation</artifactId> 
			<version>1.1.1</version> </dependency> -->

		<!-- <dependency> <groupId>io.qameta.allure</groupId> <artifactId>allure-testng</artifactId> 
			<version>2.6.0</version> <scope>test</scope> </dependency> -->
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.21</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>servlet-api</artifactId>
			<version>3.0-alpha-1</version>
		</dependency>

		<dependency>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-resources-plugin</artifactId>
			<version>2.4.3</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.mojo</groupId>
			<artifactId>build-helper-maven-plugin</artifactId>
			<version>3.0.0</version>
			<type>maven-plugin</type>
		</dependency>

		<!-- <dependency> <groupId>ru.yandex.qatools.allure</groupId> <artifactId>allure-jenkins-plugin</artifactId> 
			<version>2.9</version> </dependency> -->

		<!-- <dependency> <groupId>io.qameta.allure</groupId> <artifactId>allure-testng</artifactId> 
			<version>2.8.1</version> </dependency> -->

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.15</version>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.6</version>
		</dependency>


	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>${basedir}/src/main/resources</directory>
			</resource>
		</resources>
		<plugins>

			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>9.2.11.v20150529</version>
			</plugin>

			<!-- <plugin> <groupId>io.qameta.allure</groupId> <artifactId>allure-maven</artifactId> 
				<version>2.9</version> <configuration> <reportVersion>2.3.1</reportVersion> 
				</configuration> </plugin> -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<suiteXmlFiles>
						<suiteXmlFile>C:\Users\JuneAhn\eclipse-workspace\ahnlab\TestNG.xml</suiteXmlFile>
					</suiteXmlFiles>
					<testFailureIgnore>true</testFailureIgnore>
					<argLine>
						-javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
					</argLine>

					<suiteXmlFiles>
						<suiteXmlFile>TestNG.xml</suiteXmlFile>
					</suiteXmlFiles>

					<testFailureIgnore>true</testFailureIgnore>
					<useSystemClassLoader>false</useSystemClassLoader>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.aspectj</groupId>
						<artifactId>aspectjweaver</artifactId>
						<version>${aspectj.version}</version>
					</dependency>
				</dependencies>
			</plugin>
			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-surefire-plugin</artifactId> 
				<version>2.22.0</version> <configuration> Suite testng xml file to consider 
				for test execution <suiteXmlFiles> <suiteXmlFile>Testng.xml</suiteXmlFile> 
				</suiteXmlFiles> </configuration> </plugin> -->

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.4.3</version>
				<executions>
					<execution>
						<id>copy-resources</id>
						<!-- here the phase you need -->
						<phase>validate</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${basedir}/target/allure-results</outputDirectory>
							<resources>
								<resource>
									<directory>src/test/resources</directory>
									<filtering>true</filtering>
								</resource>
							</resources>
							<archive>
								<manifest>
									<mainclass>test.Test</mainclass>
								</manifest>
							</archive>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
	<reporting>
		<excludeDefaults>true</excludeDefaults>
		<plugins>
			<plugin>
				<groupId>io.qameta.allure</groupId>
				<artifactId>allure-maven</artifactId>
				<version>2.9</version>
				<configuration>
					<propertiesFilePath>src/test/resources/allure.properties</propertiesFilePath>
					<reportVersion>2.5.0</reportVersion>
					<resultsDirectory>/Users/juneahn/git/m_blia/allure-results</resultsDirectory>
					<reportDirectory>/Users/juneahn/git/m_blia/allure-report</reportDirectory>

					<!-- <reportDirectory>${basedir}/target/allure-report</reportDirectory> 
						<resultsDirectory>${basedir}/target/allure-results</resultsDirectory> -->
					<!-- <properties> <allure.results.directory>./target/allure-results</allure.results.directory> 
						</properties> -->
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>